fixing the z-index issue

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ img {
 
 .status {
     position: absolute;
-    z-index: 999;
+    z-index: 10;
 }
 
 .status-message > div {
@@ -354,8 +354,9 @@ button {
     align-self: center;
     position: absolute;
     bottom: 10px;
-    z-index: 10;
+    z-index: 20;
     cursor: pointer;
+    text-decoration: underline;
 }
 
 .roll-credits {
@@ -365,7 +366,7 @@ button {
     width: 100vw;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 20;
     text-align: center;
     /* animation: status-message 1s ease-out 0s 1 normal;    */
     background: radial-gradient( #322b5675, rgb(13, 3, 36) 99%);
@@ -393,6 +394,10 @@ button {
     color: white;
     text-transform: lowercase;
 }
+.credits-body a:hover {
+    color: #dc6759;
+}
+
 
 .left-credits {
     text-align: right;
